B_H automatic update
