# geelooy/api/tunnel/control/docs/actions.js
@@ -21,18 +21,34 @@ const actions = [
   "affectedComponents",
   "affectedRoutes",
   "affectedTests",
+  "agent",
   "agentActionStream",
   "agentDoctor",
   "agentSelfTest",
   "agentVersionSkewCheck",
+  "aiAgentConfigSet",
+  "aiAgentList",
+  "aiAgentMessage",
+  "aiAgentRemoveProviderKey",
+  "aiAgentSetProviderKey",
+  "aiAgentSpawnNovel",
+  "aiAgentSpawnTask",
+  "aiAgentTaskList",
+  "aiAgentTaskResult",
+  "aiAgentTaskStatus",
   "aiCommandBatch",
   "aiContextPack",
+  "aiTemplateGet",
+  "aiTemplateList",
+  "aiTemplateRender",
+  "aiTemplateRun",
   "aiWorkflowLang",
   "aiWorkflowRun",
   "apiContractCheck",
   "apiContractDiscover",
   "apiSmokeTest",
   "applyPatch",
+  "appModeMatrix",
   "architectureScore",
   "assertAction",
   "astOutline",
@@ -74,6 +90,13 @@ const actions = [
   "chatgptContinuationTick",
   "chatgptContinueConversation",
   "chatgptCurrentConversation",
+  "chatgptHourLoopMenu",
+  "chatgptHourLoopPromote",
+  "chatgptHourLoopStart",
+  "chatgptHourLoopStatus",
+  "chatgptHourLoopStop",
+  "chatgptHourLoopStress",
+  "chatgptHourLoopTick",
   "chatgptListConversations",
   "chatgptListSessions",
   "chatgptLogin",
@@ -130,6 +153,11 @@ const actions = [
   "commandMemorySave",
   "commandOutputPage",
   "commandPoll",
+  "commandPresetDelete",
+  "commandPresetGet",
+  "commandPresetList",
+  "commandPresetRun",
+  "commandPresetSave",
   "commandRun",
   "commandStart",
   "commandStatus",
@@ -177,6 +205,7 @@ const actions = [
   "detectDeadConcepts",
   "docsGeneratedFreshness",
   "doctorAll",
+  "domDomRenderLab",
   "duplicateBasenames",
   "duplicateConceptScan",
   "emptyDir",
@@ -186,6 +215,11 @@ const actions = [
   "envDoctor",
   "envFileAudit",
   "environmentVirtualizer",
+  "ephemeralDelete",
+  "ephemeralList",
+  "ephemeralMeta",
+  "ephemeralPage",
+  "ephemeralSearch",
   "errorCluster",
   "failedActionMemory",
   "failingTestTriage",
@@ -242,6 +276,7 @@ const actions = [
   "httpRequest",
   "httpSessionClear",
   "httpTrace",
+  "imageWrite",
   "importResolverExplain",
   "inferArchitecture",
   "inferBusinessRules",
@@ -284,6 +319,7 @@ const actions = [
   "md",
   "merkavaCommandTree",
   "merkavaParserSmoke",
+  "merkavaRenderLab",
   "merkavaVsChromeDiff",
   "merkavaWorkflowRun",
   "microPatchPlanner",
@@ -402,6 +438,7 @@ const actions = [
   "missionRefrigerate",
   "missionRepeatBetter",
   "missionReport",
+  "missionResourceStatus",
   "missionReviewNext8Step",
   "missionRoleRotate",
   "missionRoomAcceptSplit",
@@ -468,6 +505,13 @@ const actions = [
   "missionThaw",
   "missionTimeline",
   "missionTransactionPlan",
+  "missionTurnDrain",
+  "missionTurnOnce",
+  "missionTurnPause",
+  "missionTurnResume",
+  "missionTurnSet",
+  "missionTurnStatus",
+  "missionTurnStop",
   "missionVerify",
   "missionWatchdogRecover",
   "missionWatchdogStatus",
@@ -624,6 +668,7 @@ const actions = [
   "remoteNativeDesktopRfbStatus",
   "remoteNativeDesktopRfbStop",
   "remoteNativeDesktopSampleScene",
+  "renderModeMatrix",
   "repairPatchSuggester",
   "replaceFunction",
   "replaceFunctionBody",
@@ -711,6 +756,12 @@ const actions = [
   "symbolOutline",
   "symbolResolutionTrace",
   "syntaxCheck",
+  "taskAppendOutput",
+  "taskComplete",
+  "taskFail",
+  "taskOutputPage",
+  "taskStart",
+  "taskStatus",
   "templateFork",
   "templateFromAction",
   "templateFromHistory",
@@ -743,7 +794,10 @@ const actions = [
   "tunnelLivenessTimeline",
   "typecheckRunner",
   "universalAppManifest",
+  "uploadImage",
   "virtualDomDiff",
+  "virtualDomScreenshot",
+  "virtualDomSnapshot",
   "virtualDomTest",
   "virtualOsGraphDelete",
   "virtualOsGraphDiff",
@@ -765,6 +819,7 @@ const actions = [
   "waitForPort",
   "waitForUrl",
   "watchTestOnce",
+  "windowsExeSmokeTest",
   "workerActionStream",
   "workflowGet",
   "workflowList",
@@ -774,6 +829,7 @@ const actions = [
   "workspaceDoctor",
   "write",
   "writeIfHash",
+  "writeImage",
   "writePayloadSizer",
   "yamlValidate"
 ];
